k8s/ingress/cors-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
  namespace: default
spec:
  headers:
    accessControlAllowCredentials: true
    accessControlAllowHeaders:
      - "*"
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "OPTIONS"
      - "PATCH"
    accessControlAllowOriginList:
      - "https://studynow.space"
      - "https://www.studynow.space"
      - "http://localhost:3000"
    accessControlMaxAge: 86400
